--- a/ques20.html
+++ b/ques20.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="face">
-        <div id="eyes">
+        <div id="eye">
             <div id="left"></div>
             <div id="right"></div>
         </div>
